...
      }
    },
    "Balanced" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Blog Generator" : {
      "comment" : "A model that generates blog posts.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Choose quality" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Download AI Models" : {
      "comment" : "A button that downloads the AI models for the app.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Edit" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "High Quality" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "History" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Just speak your mind" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Made by" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "New Recording" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Next" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "No data leaves your device. Free and Private, Forever." : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Private by design" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Reset & Re-download" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Reset & Re-download Models" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Setting Up VoiceBlogger" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Settings" : {
      "comment" : "A button that displays a sheet for settings.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Skip" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Start recording" : {
      "comment" : "A button that starts recording audio.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Stop demo recording" : {
      "comment" : "A button that stops a demo recording.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Supports 90+ different languages!" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Sync across your devices" : {
      "comment" : "A heading for the iCloud sync option.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Try recording" : {
      "comment" : "A button that triggers a demo recording.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Upload Recording" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Version" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "View on GitHub" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Voice Blogger" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "VoiceBlogger" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Your words, beautifully written" : {
      "localizations" : {
        "es" : {
...
